syntax = "proto3";

option csharp_namespace = "FxService.Api.Account";

package account;

message AccountBalanceRequest {
  bool allCurrencies = 1;
  repeated string currencies = 2;
}

message AccountBalanceUpdate {
  map<string, double> currencyBalances = 1;
  string lastUpdate = 2;
}

// Keeps track of the currency account balances
service AccountService {
  // Streams out the state of the currency account balances after a change. Make a trade to receive an update message
  rpc SubscribeAccountBalances (AccountBalanceRequest) returns (stream AccountBalanceUpdate);
}
